--- a/.hintrc
+++ b/.hintrc
@@ -8,6 +8,12 @@
       {
         "link-name": "off"
       }
+    ],
+    "axe/structure": [
+      "default",
+      {
+        "listitem": "off"
+      }
     ]
   }
 }
